--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div class="header-logo">awalialatifa_blog</div>
     <div class="header-list">
       <ul>
-        <li>Gallery</li>
-        <li>Favourite</li>
+        <li><a href="https://awalialatifa24.github.io/Gallery/">Gallery</a></li>
+        <li><a href="https://awalialatifa24.github.io/Favourite/"></a>Favourite</li>
        </ul>
      </div>
    </div>
@@ -19,7 +19,7 @@
     <div class="copy-container">
       <h1>Favourite</h1>
       <h2>&#128156;&#128156;&#128156;</h2>
-      <p>Boyband</p>
+      <p><a href="https://awalialatifa24.github.io/Boyband/">Boyband</a></p>
      </div>
    <div class="footer">
       <div class="footer-list">
