--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
        </ul>
      </div>
    </div>
-  <div class="main">
+  <div class="lesson-wrapper">
     <div class="copy-container">
       <h1>Favourite</h1>
       <h2>&#128156;&#128156;&#128156;</h2>
